# cardano-dev

./: .gitignore  .herald.yml  CODEOWNERS  README.md  flake.nix
.changes/: 20260518_cabal_cache_dogfooding.yml  20260518_grpc_deps_dogfooding.yml  20260518_herald_dogfooding.yml  20260518_herald_release_dogfooding.yml  20260518_herald_validate_dogfooding.yml  20260519_135150_herald_github-actions[bot]_herald_0_1_1_0.yml  20260519_164155_herald-validate_github-actions[bot]_herald_validate_0_0_1_0.yml  20260519_164314_herald-release_github-actions[bot]_herald_release_0_0_1_0.yml  20260519_164634_cabal-cache_github-actions[bot]_cabal_cache_0_0_1_0.yml  20260519_164710_grpc-deps_github-actions[bot]_grpc_deps_0_0_1_0.yml  20260519_herald_binary_diet.yml  20260519_herald_release_idempotent.yml  20260519_herald_release_outputs.yml  20260519_herald_release_pin_version.yml  20260519_herald_validate_error_annotations.yml  20260519_herald_validate_pin_version.yml  20260525_herald_per_project_changes_dir.yml  20260526_herald_docs_chap_release_flow.yml  20260526_herald_release_chap_instructions.yml  20260526_herald_release_resilience.yml  20260526_herald_release_show_actor.yml
.github/workflows/: herald-release.yml  herald-validate.yml
actions/cabal-cache/: CHANGELOG.md
actions/grpc-deps/: CHANGELOG.md
actions/herald-release/: CHANGELOG.md  action.yml  example.yml
actions/herald-validate/: CHANGELOG.md  action.yml  example.yml
herald/: CHANGELOG.md  README.md  REQUIREMENTS.md  cabal.project  herald.cabal
herald/.github/workflows/: release.yml  validate-changelogs.yml
herald/app/: Main.hs
herald/spec/: requirements.md
herald/spec/decisions/: 001-build-vs-buy.md  002-version-file.md
herald/spec/stories/: batch.md  changelog.md  config.md  extract.md  fragments.md  init.md  next.md  pvp.md  release-actions.md  terminal.md  validate.md  version-sources.md
herald/src/Herald/: Cabal.hs  Changelog.hs  Config.hs  Fragment.hs  Git.hs  Pvp.hs  Terminal.hs  Types.hs  VersionFile.hs
herald/src/Herald/Command/: Batch.hs  Init.hs  New.hs  Next.hs  Validate.hs
herald/src/Herald/Fragment/: Read.hs  Render.hs
herald/src/Herald/Git/: Repository.hs
herald/test/: Main.hs
herald/test-e2e/: Main.hs
herald/test-e2e/Test/Herald/E2E/: Batch.hs  Fixtures.hs  Fragment.hs  Init.hs  Next.hs  Validate.hs
herald/test-e2e/Test/Herald/E2E/Batch/: PerProject.hs
herald/test-e2e/Test/Herald/E2E/Fixtures/: PerProject.hs  Standard.hs  VersionFile.hs
herald/test-e2e/Test/Herald/E2E/Fragment/: PerProject.hs
herald/test-e2e/Test/Herald/E2E/Validate/: PerProject.hs
herald/test-lib/Test/Herald/: Assertions.hs  Fixtures.hs
herald/test/Test/Herald/: Cabal.hs  Changelog.hs  Config.hs  Fragment.hs  Git.hs  Pvp.hs  Render.hs  Terminal.hs  VersionFile.hs
herald/test/Test/Herald/Config/: ChangesDir.hs
scripts/: do-release  download-prs.sh  generate-pr-changelogs.sh  run-stylish-haskell.sh  switch-submodule-branch.sh  tag.sh
